Remove solr dependency